文件上传下载，格式化数据，时间格式

--- a/Pear-Admin-Flask/templates/system/data/index.html
+++ b/Pear-Admin-Flask/templates/system/data/index.html
@@ -499,22 +499,26 @@
         // 时间选择器
         laydate.render({
           elem: '#ponding-form-date',
-          type: 'datetime'
+          type: 'datetime',
+          fullPanel: true
         })
 
         laydate.render({
           elem: '#ponding-form-format-time',
-          type: 'date'
+          type: 'datetime',
+          fullPanel: true
         })
       
         laydate.render({
           elem: '.ponding-start-time',
-          type: 'datetime'
+          type: 'datetime',
+          fullPanel: true
         })
       
         laydate.render({
           elem: '.ponding-end-time',
-          type: 'datetime'
+          type: 'datetime',
+          fullPanel: true
         })
       
         
