--- a/Pear-Admin-Flask/templates/system/task/index_back.html
+++ b/Pear-Admin-Flask/templates/system/task/index_back.html
@@ -410,12 +410,14 @@
       
         laydate.render({
           elem: '#task-form-start-datetime',
-          type: 'datetime'
+          type: 'datetime',
+          fullPanel: true
         })
       
         laydate.render({
           elem: '#task-form-end-datetime',
-          type: 'datetime'
+          type: 'datetime',
+          fullPanel: true
         })
       })
     </script>
