--- a/Pear-Admin-Flask/templates/system/user/index.html
+++ b/Pear-Admin-Flask/templates/system/user/index.html
@@ -323,6 +323,7 @@
         laydate.render({
           elem: "#form_create_at",
           type: "datetime",
+          fullPanel: true
         });
 
         function get_id(list_tree_data) {
